Break out modules into own apps

--- a/arsenalfc/pom.xml
+++ b/arsenalfc/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>arsenalfc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>arsenalfc</name>
-    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -43,5 +42,18 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
